# dtt

./: AUTHORS.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  document.yml  format.yml  lint.yml  release.yml  rust.yml
benches/: criterion.rs
dtt/: all.html  enum.AppError.html  fn.run.html  index.html  macro.dtt!.html  macro.dtt.html  macro.dtt_add_days!.html  macro.dtt_add_days.html  macro.dtt_assert!.html  macro.dtt_assert.html  macro.dtt_clone!.html  macro.dtt_clone.html  macro.dtt_create_vec!.html  macro.dtt_create_vec.html  macro.dtt_diff!.html  macro.dtt_diff.html  macro.dtt_diff_days!.html  macro.dtt_diff_days.html  macro.dtt_diff_seconds!.html  macro.dtt_diff_seconds.html  macro.dtt_format!.html  macro.dtt_format.html  macro.dtt_is_valid_function!.html  macro.dtt_is_valid_function.html  macro.dtt_join!.html  macro.dtt_join.html  macro.dtt_map!.html  macro.dtt_map.html  macro.dtt_max!.html  macro.dtt_max.html  macro.dtt_min!.html  macro.dtt_min.html  macro.dtt_new_with_tz!.html  macro.dtt_new_with_tz.html  macro.dtt_now!.html  macro.dtt_now.html  macro.dtt_parse!.html  macro.dtt_parse.html  macro.dtt_print!.html  macro.dtt_print.html  (+13 more)
dtt/constants/: constant.DESCRIPTION.html  constant.TEST_MODE_ENABLED.html  constant.TEST_MODE_ENV.html  constant.VERSION.html  constant.WELCOME_MSG.html  index.html  sidebar-items.js
dtt/datetime/: fn.days_in_month.html  fn.is_leap_year.html  index.html  sidebar-items.js  struct.DateTime.html  struct.DateTimeBuilder.html
dtt/error/: enum.AppError.html  enum.DateTimeError.html  index.html  sidebar-items.js
dtt/macros/: index.html
dtt/prelude/: index.html
examples/: dtt.rs
implementors/core/cmp/: trait.PartialEq.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
search.desc/dtt/: dtt-desc-0-.js
src/: datetime.rs  error.rs  lib.rs  macros.rs  main.rs
src/aho_corasick/: ahocorasick.rs.html  automaton.rs.html  dfa.rs.html  lib.rs.html  macros.rs.html
src/aho_corasick/nfa/: contiguous.rs.html  mod.rs.html  noncontiguous.rs.html
src/aho_corasick/packed/: api.rs.html  ext.rs.html  mod.rs.html  pattern.rs.html  rabinkarp.rs.html  vector.rs.html
src/aho_corasick/util/: alphabet.rs.html  buffer.rs.html  byte_frequencies.rs.html  debug.rs.html  error.rs.html  int.rs.html  mod.rs.html  prefilter.rs.html  primitives.rs.html  remapper.rs.html  search.rs.html  special.rs.html
src/deranged/: lib.rs.html  traits.rs.html  unsafe_wrapper.rs.html
src/dtt/: datetime.rs.html  error.rs.html  lib.rs.html  macros.rs.html
src/itoa/: lib.rs.html  udiv128.rs.html
src/lazy_static/: inline_lazy.rs.html  lib.rs.html
src/memchr/: cow.rs.html  ext.rs.html  lib.rs.html  macros.rs.html  memchr.rs.html  vector.rs.html
src/memchr/arch/: mod.rs.html
src/memchr/memmem/: mod.rs.html  searcher.rs.html
src/num_conv/: lib.rs.html
src/paste/: attr.rs.html  error.rs.html  lib.rs.html  segment.rs.html
src/powerfmt/: buf.rs.html  ext.rs.html  lib.rs.html  smart_display.rs.html  smart_display_impls.rs.html
src/proc_macro2/: detection.rs.html  extra.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  rcvec.rs.html  wrapper.rs.html
src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
src/regex/: builders.rs.html  bytes.rs.html  error.rs.html  find_byte.rs.html  lib.rs.html
src/regex/regex/: bytes.rs.html  mod.rs.html  string.rs.html
src/regex/regexset/: bytes.rs.html  (+2 more)
src/regex_automata/: lib.rs.html  macros.rs.html
src/regex_syntax/: debug.rs.html  either.rs.html  error.rs.html  lib.rs.html  parser.rs.html  rank.rs.html  unicode.rs.html  utf8.rs.html
src/ryu/: common.rs.html  d2s.rs.html  d2s_full_table.rs.html  d2s_intrinsics.rs.html  digit_table.rs.html  f2s.rs.html  f2s_intrinsics.rs.html  lib.rs.html
src/serde/: integer128.rs.html  lib.rs.html  macros.rs.html
src/serde_derive/: bound.rs.html  de.rs.html  dummy.rs.html  fragment.rs.html  lib.rs.html  pretend.rs.html  ser.rs.html  this.rs.html
src/serde_json/: de.rs.html  error.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  map.rs.html  number.rs.html  read.rs.html  ser.rs.html
src/syn/: attr.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  drops.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  gen_helper.rs.html  generics.rs.html  group.rs.html  ident.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  lookahead.rs.html  mac.rs.html  macros.rs.html  meta.rs.html  op.rs.html  parse.rs.html  parse_macro_input.rs.html  parse_quote.rs.html  path.rs.html  print.rs.html  punctuated.rs.html  restriction.rs.html  sealed.rs.html  span.rs.html  spanned.rs.html  thread.rs.html  token.rs.html  ty.rs.html  verbatim.rs.html
src/thiserror/: aserror.rs.html  display.rs.html  lib.rs.html
src/thiserror_impl/: ast.rs.html  attr.rs.html  expand.rs.html  fmt.rs.html  generics.rs.html  lib.rs.html  prop.rs.html  span.rs.html  valid.rs.html
src/time/: date.rs.html  duration.rs.html  instant.rs.html  internal_macros.rs.html  lib.rs.html  macros.rs.html  month.rs.html  offset_date_time.rs.html  primitive_date_time.rs.html  time.rs.html  utc_offset.rs.html  util.rs.html  weekday.rs.html
src/time_core/: convert.rs.html  lib.rs.html  util.rs.html
src/time_macros/: date.rs.html  datetime.rs.html  error.rs.html  lib.rs.html  offset.rs.html  quote.rs.html  serde_format_description.rs.html  time.rs.html  to_tokens.rs.html
src/unicode_ident/: lib.rs.html  tables.rs.html
src/xtask/: main.rs.html
tests/: dtt.rs  test_datetime.rs  test_dtt.rs  test_error.rs  test_lib.rs  test_macros.rs  test_main.rs  test_readme.rs
xtask/: Cargo.toml  all.html  fn.main.html  index.html
(+248 files in other folders)
