# -----------------------------------------------------------------------------
# DateTime (DTT) - A Rust library for parsing, validating, manipulating, and
# formatting dates and times.
# -----------------------------------------------------------------------------

[package]
name = "dtt"
version = "0.0.9"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
authors = ["The DateTime (DTT) contributors"]
build = "build.rs"
description = """
    A Rust library for parsing, validating, manipulating, and formatting dates
    and times.
"""
homepage = "https://dttlib.com/"
documentation = "https://docs.rs/dtt"
repository = "https://github.com/sebastienrousseau/dtt.git"
readme = "README.md"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------
categories = ["date-and-time", "parser-implementations", "value-formatting"]
keywords = ["dtt", "date", "datetime", "time", "timezone"]
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]

# Included and excluded files.
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# -----------------------------------------------------------------------------
# Library Configuration
# -----------------------------------------------------------------------------
[lib]
crate-type = ["lib"]
name = "dtt"
path = "src/lib.rs"

# -----------------------------------------------------------------------------
# Benchmarks
# -----------------------------------------------------------------------------
[[bench]]
name = "benchmark"
path = "benches/criterion.rs"
harness = false

[profile.bench]
debug = true

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
lazy_static = "1.5.0"
paste = "1.0.15"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
# serde_derive = "1.0.217"
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "2.0.11"

# -----------------------------------------------------------------------------
# Dev-Dependencies
# -----------------------------------------------------------------------------
[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
serde_json = "1.0.138"

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------
[build-dependencies]
version_check = "0.9.5"

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
default = []
bench = []

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# -----------------------------------------------------------------------------
# Linting config
# -----------------------------------------------------------------------------

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_results = "warn"

bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
